Refactoring `Quest#select()`